2007-05-09  Prakash Punnoor <prakash@punnoor.de>

	* src/alc/alc_device.c, src/alc/alc_device.h,
	src/alc/alc_context.c: proper Device enumeration
	(patch by Chris Robinson <chris.kcat@gmail.com>);
	minor clean-up and optimization

2007-04-21  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_alsa: set periods to 4 to fix
	statics in 4ch mode
	
	* alc/alc_context.h: set canon speed to 48kHz to match most
	soundcards

2007-04-14  Prakash Punnoor <prakash@punnoor.de>

	* src/al_buffer.c : optimization and correct error handling

2007-02-19  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindOpenALBackends.cmake: add definitions
	only to CFLAGS to prevent nasm/yasm picking them up

2007-02-18  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/CMakeASMInformation.cmake: sync to
	aften version
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm: fix segment
	label

2006-11-01  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_darwin.c: make it compilable and
	mostly warning-free
	
	* src/al_main.h, src/al_main.c: put _alFloatMul pointer into
	object and initialise to make it compilable on Darwin
	
	* src/audioconvert/ac_misc.c: simplify and get rid of some
	warnings
	
	* src/extensions/al_ext_vorbis.c: rename shadowed var
	
	* configure.ac, admin/CMakeModules/CMakeASMInformation.cmake:
	pass correct ASM flags for Intel Macs

2006-10-30  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerSIMDFlags.cmake: deleted
	
	* Makefile.am: update extra files
	
	* src/al_debug.c: prevent warning if _GNU_SOURCE was alread defined
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm: fix nasm not generating
	symbol

2006-10-30  Sven Panne  <sven.panne@aedion.de>

	* src/extensions/al_ext_vorbis.c: Added a workaround for incorrect Ogg
	Vorbis headers, avoiding a harmless GCC warning.

	* src/al_dlopen.c, src/al_dlopen.h, src/al_ext.c, src/alc/alc_context.c: